# library-management-app

./: CMakeLists.txt  LibraryManagementTool.sln  README.md
LibraryManagementTool/: LibraryManagementTool.vcxproj  LibraryManagementTool.vcxproj.filters  main.cpp  temp.cpp
LibraryManagementTool/DataStructures/: AVL_Tree.h  DoubleLinkedList.h  DynamicArray.h  HashMap.h  LinearList.h  LinkedList.h  Stack.cpp  Stack.h
LibraryManagementTool/Databases/: DAU_SACH_DB.txt  DOC_GIA_DB.txt  DanhSachTheDocGiaIndex.txt  ReaderIndex.txt  ReaderIndicies.txt
LibraryManagementTool/DauSach/: DauSach.cpp  DauSach.h
LibraryManagementTool/Helper/: ConstantsAndGlobalVariables.h  Helper.cpp  Helper.h  IndexGenerator.cpp  IndexGenerator.h  Package.h
LibraryManagementTool/Tabs/DanhSachDauSachTab/: DanhSachDauSachStyling.cpp  DanhSachDauSachStyling.h  DanhSachDauSachView.cpp  DanhSachDauSachView.h  SearchFilters.h  SelectedObject.h  TitleDetailCard.cpp  TitleDetailCard.hpp  TitleDetailView.cpp  TitleDetailView.h  TitleListTable.cpp  TitleListTable.hpp
LibraryManagementTool/Tabs/DanhSachTheDocGiaTab/: BookCirculationTable.cpp  BookCirculationTable.h  BookCirculationView.cpp  BookCirculationView.h  DanhSachTheDocGia.cpp  DanhSachTheDocGia.h  DanhSachTheDocGiaStyling.cpp  DanhSachTheDocGiaStyling.h  ReaderDetail.cpp  ReaderDetail.hpp  ReaderListTable.cpp  ReaderListTable.hpp  ReaderTableSortedByName.cpp  ReaderTableSortedByName.h  SearchBox.cpp  SearchBox.hpp  SecondSearchBox.cpp  SecondSearchBox.h  UpdateReaderProcess.cpp  UpdateReaderProcess.hpp
LibraryManagementTool/Tabs/LandingView/: LandingView.cpp  LandingView.h  LandingViewStyling.cpp  LandingViewStyling.h
LibraryManagementTool/Tabs/ThongKeTab/: ThongKeView.cpp  ThongKeView.h
LibraryManagementTool/Tabs/UI/: Button.cpp  Button.h  Component.cpp  Component.hpp  Datasheet.cpp  Datasheet.h  Elements.cpp  Elements.h  SearchFilters.h  SelectedObject.h  Sheets.hpp  Table.hpp
LibraryManagementTool/TheDocGia/: TheDocGia.cpp  TheDocGia.h
LibraryManagementTool/Views/: DanhSachDauSachView.cpp  DanhSachDauSachView.h  DanhSachTheDocGia.cpp  DanhSachTheDocGia.h  Elements.cpp  Elements.h  ExitView.cpp  ExitView.h  LandingView.cpp  LandingView.h  ThongKeView.cpp  ThongKeView.h
